-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 20, 21
-
Component/s: hotspot
-
b30
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8299317 | 21 | Roland Westrelin | P3 | Resolved | Fixed | b04 |
The following test failed in the JDK20 CI:
applications/javafuzzer/MediumTest.java
Here's a snippet from the log file:
Summary of the JavaFuzzer run:
------------------------------
Host: ol8-aarch64-590460
Tests: 8 x 50
Args: -conf config.yml
Started at: Tue Dec 6 04:36:43 UTC 2022
r1- 50: 42 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 8 Reference Java failures
r2- 50: 36 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 14 Reference Java failures
r4- 50: 33 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 17 Reference Java failures
r8- 50: 31 passed, 2 crashes, 0 fails, 0 hangs, 0 incorrect tests, 18 Reference Java failures
r3- 50: 31 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 19 Reference Java failures
r5- 50: 30 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 20 Reference Java failures
r7- 50: 31 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 19 Reference Java failures
r6- 50: 30 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 20 Reference Java failures
Finished at: Tue Dec 6 05:48:49 UTC 2022
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S151540/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/39ad2c2e-f413-4e8e-b682-799b5d3d5239/runs/86b033bb-f00d-44c5-9f7f-ca18450e04df/workspace/open/src/hotspot/share/opto/multnode.cpp:77), pid=2551483, tid=2551499
# assert((Opcode() != Op_If && Opcode() != Op_RangeCheck) || outcnt() == 2) failed: bad if #1
#
# JRE version: Java(TM) SE Runtime Environment (20.0+27) (fastdebug build 20-ea+27-2114)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+27-2114, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x14443ec] MultiNode::proj_out(unsigned int) const+0x9c
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /tmp/fuzzer.tmp.RxSrez9WZc/core.2551483)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S151540/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/39ad2c2e-f413-4e8e-b682-799b5d3d5239/runs/86b033bb-f00d-44c5-9f7f-ca18450e04df/workspace/open/src/hotspot/share/opto/multnode.cpp:77), pid=2551923, tid=2551937
# assert((Opcode() != Op_If && Opcode() != Op_RangeCheck) || outcnt() == 2) failed: bad if #1
#
# JRE version: Java(TM) SE Runtime Environment (20.0+27) (fastdebug build 20-ea+27-2114)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+27-2114, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x14443ec] MultiNode::proj_out(unsigned int) const+0x9c
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /tmp/fuzzer.tmp.RxSrez9WZc/core.2551923)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
[2022-12-06T05:48:49.293374139Z] Waiting for completion for process 2503650
[2022-12-06T05:48:49.293578780Z] Waiting for completion finished for process 2503650
----------System.err:(13/728)----------
java.lang.RuntimeException: assertEquals: expected 1 to equal 2
at jdk.test.lib.Asserts.fail(Asserts.java:594)
at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
at jdk.test.lib.Asserts.assertEquals(Asserts.java:189)
at applications.javafuzzer.JavaFuzzerRunner.main(JavaFuzzerRunner.java:245)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:578)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
at java.base/java.lang.Thread.run(Thread.java:1599)
JavaTest Message: Test threw exception: java.lang.RuntimeException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: assertEquals: expected 1 to equal 2
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000fffd10355010): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=2551499, stack(0x0000fffce91e0000,0x0000fffce93e0000)]
Current CompileTask:
C2: 195 12 b 4 Test::vMeth (369 bytes)
Stack: [0x0000fffce91e0000,0x0000fffce93e0000], sp=0x0000fffce93d9a90, free space=2022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x14443ec] MultiNode::proj_out(unsigned int) const+0x9c (multnode.cpp:77)
V [libjvm.so+0x128e3bc] PhaseIdealLoop::get_skeleton_predicates(Node*, Unique_Node_List&, bool)+0x1c8 (loopPredicate.cpp:381)
V [libjvm.so+0x12c822c] PhaseIdealLoop::collect_potentially_useful_predicates(IdealLoopTree*, Unique_Node_List&)+0x19c (loopnode.cpp:4056)
V [libjvm.so+0x12c8658] PhaseIdealLoop::eliminate_useless_predicates()+0x3c8 (loopnode.cpp:4077)
V [libjvm.so+0x12de720] PhaseIdealLoop::build_and_optimize()+0x8bc (loopnode.cpp:4427)
V [libjvm.so+0x9a8100] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x1e0 (loopnode.hpp:1082)
V [libjvm.so+0x9a3ca8] Compile::Optimize()+0xde8 (compile.cpp:2146)
V [libjvm.so+0x9a657c] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x11cc (compile.cpp:830)
V [libjvm.so+0x7c5858] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1b4 (c2compiler.cpp:113)
V [libjvm.so+0x9b2dc4] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa10 (compileBroker.cpp:2237)
V [libjvm.so+0x9b3828] CompileBroker::compiler_thread_loop()+0x5b8 (compileBroker.cpp:1916)
V [libjvm.so+0xed3a20] JavaThread::thread_main_inner()+0x21c (javaThread.cpp:696)
V [libjvm.so+0x17d48e8] Thread::call_run()+0xf8 (thread.cpp:224)
V [libjvm.so+0x14ed344] thread_native_entry(Thread*)+0x100 (os_linux.cpp:739)
C [libpthread.so.0+0x7908] start_thread+0x188
applications/javafuzzer/MediumTest.java
Here's a snippet from the log file:
Summary of the JavaFuzzer run:
------------------------------
Host: ol8-aarch64-590460
Tests: 8 x 50
Args: -conf config.yml
Started at: Tue Dec 6 04:36:43 UTC 2022
r1- 50: 42 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 8 Reference Java failures
r2- 50: 36 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 14 Reference Java failures
r4- 50: 33 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 17 Reference Java failures
r8- 50: 31 passed, 2 crashes, 0 fails, 0 hangs, 0 incorrect tests, 18 Reference Java failures
r3- 50: 31 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 19 Reference Java failures
r5- 50: 30 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 20 Reference Java failures
r7- 50: 31 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 19 Reference Java failures
r6- 50: 30 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 20 Reference Java failures
Finished at: Tue Dec 6 05:48:49 UTC 2022
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S151540/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/39ad2c2e-f413-4e8e-b682-799b5d3d5239/runs/86b033bb-f00d-44c5-9f7f-ca18450e04df/workspace/open/src/hotspot/share/opto/multnode.cpp:77), pid=2551483, tid=2551499
# assert((Opcode() != Op_If && Opcode() != Op_RangeCheck) || outcnt() == 2) failed: bad if #1
#
# JRE version: Java(TM) SE Runtime Environment (20.0+27) (fastdebug build 20-ea+27-2114)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+27-2114, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x14443ec] MultiNode::proj_out(unsigned int) const+0x9c
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /tmp/fuzzer.tmp.RxSrez9WZc/core.2551483)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S151540/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/39ad2c2e-f413-4e8e-b682-799b5d3d5239/runs/86b033bb-f00d-44c5-9f7f-ca18450e04df/workspace/open/src/hotspot/share/opto/multnode.cpp:77), pid=2551923, tid=2551937
# assert((Opcode() != Op_If && Opcode() != Op_RangeCheck) || outcnt() == 2) failed: bad if #1
#
# JRE version: Java(TM) SE Runtime Environment (20.0+27) (fastdebug build 20-ea+27-2114)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+27-2114, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x14443ec] MultiNode::proj_out(unsigned int) const+0x9c
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /tmp/fuzzer.tmp.RxSrez9WZc/core.2551923)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
[2022-12-06T05:48:49.293374139Z] Waiting for completion for process 2503650
[2022-12-06T05:48:49.293578780Z] Waiting for completion finished for process 2503650
----------System.err:(13/728)----------
java.lang.RuntimeException: assertEquals: expected 1 to equal 2
at jdk.test.lib.Asserts.fail(Asserts.java:594)
at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
at jdk.test.lib.Asserts.assertEquals(Asserts.java:189)
at applications.javafuzzer.JavaFuzzerRunner.main(JavaFuzzerRunner.java:245)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:578)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
at java.base/java.lang.Thread.run(Thread.java:1599)
JavaTest Message: Test threw exception: java.lang.RuntimeException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: assertEquals: expected 1 to equal 2
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000fffd10355010): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=2551499, stack(0x0000fffce91e0000,0x0000fffce93e0000)]
Current CompileTask:
C2: 195 12 b 4 Test::vMeth (369 bytes)
Stack: [0x0000fffce91e0000,0x0000fffce93e0000], sp=0x0000fffce93d9a90, free space=2022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x14443ec] MultiNode::proj_out(unsigned int) const+0x9c (multnode.cpp:77)
V [libjvm.so+0x128e3bc] PhaseIdealLoop::get_skeleton_predicates(Node*, Unique_Node_List&, bool)+0x1c8 (loopPredicate.cpp:381)
V [libjvm.so+0x12c822c] PhaseIdealLoop::collect_potentially_useful_predicates(IdealLoopTree*, Unique_Node_List&)+0x19c (loopnode.cpp:4056)
V [libjvm.so+0x12c8658] PhaseIdealLoop::eliminate_useless_predicates()+0x3c8 (loopnode.cpp:4077)
V [libjvm.so+0x12de720] PhaseIdealLoop::build_and_optimize()+0x8bc (loopnode.cpp:4427)
V [libjvm.so+0x9a8100] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x1e0 (loopnode.hpp:1082)
V [libjvm.so+0x9a3ca8] Compile::Optimize()+0xde8 (compile.cpp:2146)
V [libjvm.so+0x9a657c] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x11cc (compile.cpp:830)
V [libjvm.so+0x7c5858] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1b4 (c2compiler.cpp:113)
V [libjvm.so+0x9b2dc4] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa10 (compileBroker.cpp:2237)
V [libjvm.so+0x9b3828] CompileBroker::compiler_thread_loop()+0x5b8 (compileBroker.cpp:1916)
V [libjvm.so+0xed3a20] JavaThread::thread_main_inner()+0x21c (javaThread.cpp:696)
V [libjvm.so+0x17d48e8] Thread::call_run()+0xf8 (thread.cpp:224)
V [libjvm.so+0x14ed344] thread_native_entry(Thread*)+0x100 (os_linux.cpp:739)
C [libpthread.so.0+0x7908] start_thread+0x188
- backported by
-
JDK-8299317 remove OpaqueZeroTripGuardPostLoop once main-loop disappears
-
- Resolved
-
- relates to
-
JDK-8294540 Remove Opaque2Node: it is broken and triggers assert
-
- Resolved
-
-
JDK-8297752 C2: Broken graph due to IfNode with a pre-loop Opaque1 node that cannot be folded while data is dying
-
- Open
-
-
JDK-8305189 C2 failed "assert(_outcnt==1) failed: not unique"
-
- Resolved
-
-
JDK-8316361 C2: assert(!failure) failed: Missed optimization opportunity in PhaseIterGVN with -XX:VerifyIterativeGVN=10
-
- Resolved
-
(3 links to)