8298176: remove OpaqueZeroTripGuardPostLoop once main-loop disappears