src/hotspot/share/opto/cfgnode.cpp
@@ -617,9 +617,9 @@ Node *RegionNode::Ideal(PhaseGVN *phase, bool can_reshape) {
       if (is_CountedLoop()) {
         Node* opaq = as_CountedLoop()->is_canonical_loop_entry();
         if (opaq != NULL) {
-          // This is not a loop anymore. No need to keep the Opaque1 node on the test that guards the loop as it won't be
-          // subject to further loop opts.
-          assert(opaq->Opcode() == Op_OpaqueZeroTripGuard, "");
+          // This is not a loop anymore. No need to keep the OpaqueZeroTripGuard node
+          // on the test that guards the loop as it won't be subject to further loop opts.
+          assert(opaq->is_OpaqueZeroTripGuard(), "");
           igvn->replace_node(opaq, opaq->in(1));
         }
       }
