src/hotspot/share/opto/loopnode.cpp
@@ -2967,17 +2967,23 @@ const Type* OuterStripMinedLoopEndNode::Value(PhaseGVN* phase) const {
 bool OuterStripMinedLoopEndNode::is_expanded(PhaseGVN *phase) const {
   // The outer strip mined loop head only has Phi uses after expansion
   if (phase->is_IterGVN()) {
-    Node* backedge = proj_out_or_null(true);
-    if (backedge != NULL) {
-      Node* head = backedge->unique_ctrl_out_or_null();
-      if (head != NULL && head->is_OuterStripMinedLoop()) {
-        if (head->find_out_with(Op_Phi) != NULL) {
-          return true;
-        }
-      }
+    OuterStripMinedLoopNode* head = loopnode();
+    if (head != nullptr && head->find_out_with(Op_Phi) != nullptr) {
+      return true;
     }
   }
   return false;
+}
+
+OuterStripMinedLoopNode* OuterStripMinedLoopEndNode::loopnode() const {
+  Node* backedge = proj_out_or_null(true);
+  if (backedge != nullptr) {
+    Node* head = backedge->unique_ctrl_out_or_null();
+    if (head != nullptr && head->is_OuterStripMinedLoop()) {
+      return head->as_OuterStripMinedLoop();
+    }
+  }
+  return nullptr; // not found
 }
 
 Node *OuterStripMinedLoopEndNode::Ideal(PhaseGVN *phase, bool can_reshape) {
@@ -5475,7 +5481,7 @@ Node* CountedLoopNode::is_canonical_loop_entry() {
   if (input >= cmpzm->req() || cmpzm->in(input) == NULL) {
     return NULL;
   }
-  bool res = cmpzm->in(input)->Opcode() == Op_OpaqueZeroTripGuard;
+  bool res = cmpzm->in(input)->is_OpaqueZeroTripGuard();
 #ifdef ASSERT
   bool found_opaque = false;
   for (uint i = 1; i < cmpzm->req(); i++) {
