src/hotspot/share/opto/loopnode.hpp
@@ -592,6 +592,7 @@ public:
   virtual Node *Ideal(PhaseGVN *phase, bool can_reshape);
 
   bool is_expanded(PhaseGVN *phase) const;
+  OuterStripMinedLoopNode* loopnode() const;
 };
 
 // -----------------------------IdealLoopTree----------------------------------
