src/hotspot/share/opto/node.hpp
@@ -130,6 +130,11 @@ class MultiNode;
 class MultiBranchNode;
 class NeverBranchNode;
 class Opaque1Node;
+class OpaqueLoopInitNode;
+class OpaqueLoopStrideNode;
+class OpaqueZeroTripGuardNode;
+class OpaqueZeroTripGuardMainLoopNode;
+class OpaqueZeroTripGuardPostLoopNode;
 class OuterStripMinedLoopNode;
 class OuterStripMinedLoopEndNode;
 class Node;
@@ -760,6 +765,11 @@ public:
     DEFINE_CLASS_ID(ClearArray, Node, 14)
     DEFINE_CLASS_ID(Halt,     Node, 15)
     DEFINE_CLASS_ID(Opaque1,  Node, 16)
+        DEFINE_CLASS_ID(OpaqueLoopInit,      Opaque1, 0)
+        DEFINE_CLASS_ID(OpaqueLoopStride,    Opaque1, 1)
+        DEFINE_CLASS_ID(OpaqueZeroTripGuard, Opaque1, 2)
+            DEFINE_CLASS_ID(OpaqueZeroTripGuardMainLoop, OpaqueZeroTripGuard, 0)
+            DEFINE_CLASS_ID(OpaqueZeroTripGuardPostLoop, OpaqueZeroTripGuard, 1)
     DEFINE_CLASS_ID(Move,     Node, 17)
     DEFINE_CLASS_ID(LShift,   Node, 18)
 
@@ -923,6 +933,11 @@ public:
   DEFINE_CLASS_QUERY(Multi)
   DEFINE_CLASS_QUERY(MultiBranch)
   DEFINE_CLASS_QUERY(Opaque1)
+  DEFINE_CLASS_QUERY(OpaqueLoopInit)
+  DEFINE_CLASS_QUERY(OpaqueLoopStride)
+  DEFINE_CLASS_QUERY(OpaqueZeroTripGuard)
+  DEFINE_CLASS_QUERY(OpaqueZeroTripGuardMainLoop)
+  DEFINE_CLASS_QUERY(OpaqueZeroTripGuardPostLoop)
   DEFINE_CLASS_QUERY(OuterStripMinedLoop)
   DEFINE_CLASS_QUERY(OuterStripMinedLoopEnd)
   DEFINE_CLASS_QUERY(Parm)
